[package]
name = "process_visualizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
# NOTE(example): This is an curated example of how to use a user-defined module/crate.
# process_collector = { path = "./src/some_dir" }
